--- a/src/assets/scss/header/modal-login.scss
+++ b/src/assets/scss/header/modal-login.scss
@@ -5,13 +5,13 @@
 #modal {
   position: absolute;
   max-width: 500px;
-  border: 1px solid $primary-blue;
   margin-left: auto;
   margin-right: auto;
   left: 0;
   right: 0;
-  top: 6rem;
+  top: 5rem;
   background: url(ilustrations/modalBg.png) no-repeat center;
+//   background-image: radial-gradient(83.62% 82.42% at 0% 17.58%, #C4C4C4 0%, rgba(196, 196, 196, 0) 100%);
   background-size: cover;
   z-index: 9999;
   padding: 1rem;
