add: logo and  gif

--- a/src/assets/scss/homeComponent/home.scss
+++ b/src/assets/scss/homeComponent/home.scss
@@ -58,6 +58,9 @@ header {
     min-height: 550px;
     right: -650px;
     z-index: -1;
+    @media(min-width:768px){ 
+      right: -350px;
+    }
   }
   
   .HS {
@@ -86,6 +89,9 @@ header {
     min-height: 550px;
     right: -950px;
     z-index: -1;
+    @media(min-width:768px){ 
+      right: -650px;
+    }
   }
   
   .default {
