--- a/src/assets/scss/header/gameSelection.scss
+++ b/src/assets/scss/header/gameSelection.scss
@@ -5,16 +5,25 @@
     display: flex;
     flex-direction: column;
     min-height: 470px;
+    @media(max-width:768px){
+        flex-direction: row;
+    }
   }
   
   .position-relative-container{
     position: relative;
     padding: 1rem;
+    display: flex;
+    flex-direction: column;
   }
   
   .position-absolute-container{
     position: absolute;
     width: 260px;
+    @media(max-width:768px){
+      position: fixed;
+      width: 360px;
+  }
     h1,
     p {
       color: $text-white;
@@ -43,4 +52,20 @@
     flex-direction: row;
     order: 2;
     margin-top: auto;
+  }
+
+  #logo-gif{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+  }
+
+  .logo{
+    width: 280px;
+    height: 154px;
+  }
+
+  .gif{
+    height: 173px;
+    width: 280px;
   }
