--- a/src/assets/scss/header/modal-login.scss
+++ b/src/assets/scss/header/modal-login.scss
@@ -10,8 +10,7 @@
   left: 0;
   right: 0;
   top: 5rem;
-  background: url(ilustrations/modalBg.png) no-repeat center;
-//   background-image: radial-gradient(83.62% 82.42% at 0% 17.58%, #C4C4C4 0%, rgba(196, 196, 196, 0) 100%);
+  background: url(/modalBg.png) no-repeat center;
   background-size: cover;
   z-index: 9999;
   padding: 1rem;
