--- a/src/assets/scss/header/gameSelection.scss
+++ b/src/assets/scss/header/gameSelection.scss
@@ -4,26 +4,39 @@
 .game-selection {
     display: flex;
     flex-direction: column;
-    min-height: 470px;
-    @media(max-width:768px){
+    max-width: 1360px;
+    gap: 3rem;
+    padding: 1rem;
+    @media(min-width: 375px) and (max-width:768px){
         flex-direction: row;
+    }
+
+    @media (min-width:768px){
+      flex-direction: row;
+      justify-content: center;
     }
   }
   
   .position-relative-container{
     position: relative;
-    padding: 1rem;
     display: flex;
+    min-height: 420px;
     flex-direction: column;
-  }
+    max-width: 600px;
+    @media(min-width: 768px){
+      flex-direction: row;
+      align-items: center;
+      padding: 1rem;
+    }
+}
   
   .position-absolute-container{
     position: absolute;
-    width: 260px;
-    @media(max-width:768px){
-      position: fixed;
-      width: 360px;
-  }
+    max-width: 360px;
+    @media(min-width:768px) and (max-width: 1440px){
+      position:static;
+      order: 2;
+    }
     h1,
     p {
       color: $text-white;
@@ -48,16 +61,24 @@
   }
   
   ul {
-    margin: 48px 49px 22px 16px;
+    margin: 48px 49px 22px 0px;
     flex-direction: row;
     order: 2;
     margin-top: auto;
+
+    @media(min-width: 768px){
+      flex-direction: column;
+      order: 1;
+    }
   }
 
   #logo-gif{
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+    @media (max-width: 767px){
+      display: none;
+    }
   }
 
   .logo{
