--- a/src/assets/scss/header/gameSelection.scss
+++ b/src/assets/scss/header/gameSelection.scss
@@ -5,7 +5,7 @@
     display: flex;
     flex-direction: column;
     max-width: 1360px;
-    gap: 3rem;
+    justify-content: space-evenly;
     padding: 1rem;
     @media(min-width: 375px) and (max-width:768px){
         flex-direction: row;
@@ -13,14 +13,15 @@
 
     @media (min-width:768px){
       flex-direction: row;
-      justify-content: center;
+      align-items: center;
+      margin: 0 auto;
     }
   }
   
   .position-relative-container{
     position: relative;
     display: flex;
-    min-height: 420px;
+    min-height: 400px;
     flex-direction: column;
     max-width: 600px;
     @media(min-width: 768px){
@@ -33,7 +34,7 @@
   .position-absolute-container{
     position: absolute;
     max-width: 360px;
-    @media(min-width:768px) and (max-width: 1440px){
+    @media(min-width:768px){
       position:static;
       order: 2;
     }
