--- a/src/assets/scss/homeComponent/home.scss
+++ b/src/assets/scss/homeComponent/home.scss
@@ -1,12 +1,14 @@
 @import '../variables/colors';
 
 header {
-    height: 550px;
+    height: 500px;
     width: 100%;
-    background-size: cover;
-    background-repeat: no-repeat;
     position: relative;
     overflow: hidden;
+    @media(min-width:768px){
+      height: 600px;
+      overflow: hidden;
+    }
   }
   
   nav {
@@ -60,6 +62,10 @@ header {
     z-index: -1;
     @media(min-width:768px){ 
       right: 0;
+    }
+
+    @media(min-width: 1440px){
+      width: 100%;
     }
   }
   
