--- a/src/assets/scss/header/navbar-medium-mobile.scss
+++ b/src/assets/scss/header/navbar-medium-mobile.scss
@@ -11,6 +11,9 @@
     align-items: center;
     width: 100%;
     flex-direction: row-reverse;
+    @media(min-width: 1440px){
+        display: none;
+    }
 }
 
 #medium-screen-btns{
