--- a/src/assets/scss/variables/_colors.scss
+++ b/src/assets/scss/variables/_colors.scss
@@ -4,3 +4,4 @@ $text-white: white;
 $bg-linearGradient: 180deg, #020203 0%, rgba(14, 17, 23, 0.92) 96.35%, rgba(14, 17, 23, 0.9) 100%;
 $bg-black: black;
 $border-color:  rgba(255, 255, 255, 0.1);
+$lighterBlack: #15171B;
