--- a/src/assets/scss/header/bigScreenNavbar.scss
+++ b/src/assets/scss/header/bigScreenNavbar.scss
@@ -1,5 +1,11 @@
 @import "../variables/colors";
 
+.teste{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 #navigation {
   display: none;
   @media (min-width: 1440px) {
@@ -7,7 +13,7 @@
     gap: 1rem;
     color: $text-white;
     z-index: 99;
-
+    margin-right: 8rem;
     li {
       cursor: pointer;
       transition: 0.2s ease;
@@ -45,7 +51,7 @@
     gap: 1rem;
   
     button {
-      padding: .4rem;
+      padding: .1rem 1rem;
       border-radius: 3.15px;
       cursor: pointer;
       &#create-account {
