--- a/src/assets/scss/homeComponent/home.scss
+++ b/src/assets/scss/homeComponent/home.scss
@@ -16,7 +16,7 @@ header {
     align-items: center;
     justify-content: space-between;
     margin: 0 auto;
-    padding: 1rem;
+    padding: .5rem;
     max-width: 1000px;
   }
   
