--- a/src/assets/scss/header/gameSelection.scss
+++ b/src/assets/scss/header/gameSelection.scss
@@ -5,6 +5,7 @@
     display: flex;
     flex-direction: column;
     max-width: 1000px;
+    padding: .5rem;
     justify-content: space-between;
     @media(min-width: 375px) and (max-width:768px){
         flex-direction: row;
