--- a/src/assets/scss/mainContainer/gamesApi.scss
+++ b/src/assets/scss/mainContainer/gamesApi.scss
@@ -3,6 +3,7 @@
 #apiGamesContainer {
   max-width: 1000px;
   margin: 20px auto 0 auto;
+  padding: .5rem;
 }
 
 #headerContent {
@@ -29,9 +30,15 @@
     color: $primary-blue;
     align-self: end;
     margin-bottom: 0.5rem;
+    transition: .2s ease;
+    cursor: pointer;
     img {
       width: 0.7rem;
       height: 0.7rem;
+    }
+
+    &:hover{ 
+      color: $primary-gray;
     }
   }
 }
@@ -43,24 +50,61 @@
   grid-column-gap: 22px;
   grid-row-gap: 22px;
   margin-top: 40px;
-  li {
-    width: 150px;
+  width: 100%;
+  @media(min-width:768px){
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+  }
+  @media(min-width:1440px){
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+  }
+
+  li img{
+    max-width: 100%;
+    max-height: 100%;
   }
 }
 
+
+
 .logo-icon {
   position: relative;
-  .background {
-    max-width: 100%;
-  }
-
   .logo {
-    width: 50%;
+    width: 75%;
     position: absolute;
     margin-left: auto;
     margin-right: auto;
     right: 0;
     left: 0;
     bottom: 25px;
+    cursor: pointer;
+    transition: .4s ease;
+    &:hover{ 
+      filter: blur(0.4px) brightness(1.5);
+    }
+  }
+}
+
+.all-games-box {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: center;
+  justify-content: center;
+  max-width: 300px;
+  a{ 
+    font-size: .7rem;
+    display: flex;
+    align-items: center;
+    gap: .3rem;
+    color: $primary-blue;
+    transition: .2s ease;
+    img { 
+      width: .6rem;
+    }
+    &:hover{ 
+      color: $primary-gray;
+    }
   }
 }
