add: footer component

--- a/src/assets/scss/mainContainer/gamesApi.scss
+++ b/src/assets/scss/mainContainer/gamesApi.scss
@@ -3,44 +3,62 @@
 #apiGamesContainer {
   max-width: 1000px;
   margin: 20px auto 0 auto;
-  padding: .5rem;
+  padding: 0.5rem;
 }
 
 #headerContent {
   color: white;
   display: flex;
   align-items: center;
-  gap: 1rem;
+  justify-content: space-between;
   h1 {
     font-size: 1.6rem;
+    max-width: 200px;
   }
   ul {
     display: none;
+    @media (min-width: 768px) {
+      display: flex;
+      align-self: end;
+      gap: 1rem;
+    }
   }
   span {
     display: none;
+    @media (min-width: 1440px) {
+      display: block;
+      align-self: start;
+      margin-top: .4rem;
+    }
   }
 
   a {
-    font-size: 0.8rem;
     display: flex;
+    font-size: 0.8rem;
     align-items: center;
     gap: 0.2rem;
-    width: 50%;
     color: $primary-blue;
     align-self: end;
     margin-bottom: 0.5rem;
-    transition: .2s ease;
+    transition: 0.2s ease;
     cursor: pointer;
     img {
       width: 0.7rem;
       height: 0.7rem;
     }
 
-    &:hover{ 
+    &:hover {
       color: $primary-gray;
     }
   }
+}
+
+#teste {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 2rem;
+  // border: 1px solid red;
 }
 
 #gamesList {
@@ -51,22 +69,20 @@
   grid-row-gap: 22px;
   margin-top: 40px;
   width: 100%;
-  @media(min-width:768px){
+  @media (min-width: 768px) {
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(4, 1fr);
   }
-  @media(min-width:1440px){
+  @media (min-width: 1440px) {
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(3, 1fr);
   }
 
-  li img{
+  li img {
     max-width: 100%;
     max-height: 100%;
   }
 }
-
-
 
 .logo-icon {
   position: relative;
@@ -79,8 +95,8 @@
     left: 0;
     bottom: 25px;
     cursor: pointer;
-    transition: .4s ease;
-    &:hover{ 
+    transition: 0.4s ease;
+    &:hover {
       filter: blur(0.4px) brightness(1.5);
     }
   }
@@ -93,17 +109,17 @@
   align-items: center;
   justify-content: center;
   max-width: 300px;
-  a{ 
-    font-size: .7rem;
+  a {
+    font-size: 0.7rem;
     display: flex;
     align-items: center;
-    gap: .3rem;
+    gap: 0.3rem;
     color: $primary-blue;
-    transition: .2s ease;
-    img { 
-      width: .6rem;
+    transition: 0.2s ease;
+    img {
+      width: 0.6rem;
     }
-    &:hover{ 
+    &:hover {
       color: $primary-gray;
     }
   }
