--- a/src/assets/scss/homeComponent/home.scss
+++ b/src/assets/scss/homeComponent/home.scss
@@ -1,128 +1,137 @@
-@import '../variables/colors';
+@import "../variables/colors";
 
 header {
-    height: 500px;
-    width: 100%;
-    position: relative;
+  height: 500px;
+  width: 100%;
+  position: relative;
+  overflow: hidden;
+  @media (min-width: 768px) {
+    height: 600px;
     overflow: hidden;
-    @media(min-width:768px){
-      height: 600px;
-      overflow: hidden;
-    }
   }
-  
-  nav {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin: 0 auto;
-    padding: .5rem;
-    max-width: 1000px;
+}
+
+nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 0 auto;
+  padding: 0.5rem;
+  max-width: 1000px;
+}
+
+nav a {
+  z-index: 99;
+}
+
+#logo {
+  height: 32px;
+  width: 69.41908264160156px;
+}
+
+.divider {
+  border: 1.5px solid rgba(255, 255, 255, 0.1);
+  width: 100%;
+  height: 5px;
+  position: relative;
+  z-index: 99;
+}
+
+.second-divider {
+  border: 1.5px solid rgba(255, 255, 255, 0.1);
+  height: 5px;
+  position: relative;
+  background-color: #00aeff;
+  width: 20%;
+  transition: 0.5s ease;
+  border-radius: 0px 4px 4px 0px;
+}
+
+.diabloIV {
+  position: absolute;
+  min-height: 550px;
+  right: -650px;
+  z-index: -1;
+  @media (min-width: 768px) {
+    right: 0;
   }
-  
-  nav a {
-    z-index: 99;
-  }
-  
-  #logo {
-    height: 32px;
-    width: 69.41908264160156px;
-  }
-  
-  .divider {
-    border: 1.5px solid rgba(255, 255, 255, 0.1);
+
+  @media (min-width: 1440px) {
     width: 100%;
-    height: 5px;
-    position: relative;
-    z-index: 99;
   }
-  
-  .second-divider {
-    border: 1.5px solid rgba(255, 255, 255, 0.1);
-    height: 5px;
-    position: relative;
-    background-color: #00AEFF;
-    width: 20%;
-    transition: .5s ease;
-    border-radius: 0px 4px 4px 0px;
-  }
-  
-  .diabloIV {
-    position: absolute;
-    min-height: 550px;
-    right: -650px;
-    z-index: -1;
-    @media(min-width:768px){ 
-      right: 0;
-    }
+}
 
-    @media(min-width: 1440px){
-      width: 100%;
-    }
+.HS {
+  position: absolute;
+  min-height: 550px;
+  right: -300px;
+  z-index: -1;
+  @media (min-width: 768px) {
+    right: 0;
   }
-  
-  .HS {
-    position: absolute;
-    min-height: 550px;
-    right: -300px;
-    z-index: -1;
-    @media(min-width:768px){ 
-      right: 0;
-    }
-    @media(min-width: 1440px){
-      width: 100%;
-    }
+  @media (min-width: 1440px) {
+    width: 100%;
   }
-  
-  .wow {
-    position: absolute;
-    min-height: 550px;
-    right: -355px;
-    z-index: -1;
-    @media(min-width:768px){ 
-      right: 0;
-    }
-    @media(min-width: 1440px){
-      width: 100%;
-    }
-  }
-  
-  .diabloHD {
-    position: absolute;
-    min-height: 550px;
-    right: -800px;
-    z-index: -1;
-    @media(min-width:768px){ 
-      right: -200px;
-    }
-    @media(min-width: 1440px){
-      width: 100%;
-      right: 0;
-    }
-  }
-  
-  .starcraft {
-    position: absolute;
-    min-height: 550px;
-    right: -500px;
-    z-index: -1;
-    @media(min-width:768px){ 
-      right: 0;
-    }
-    @media(min-width: 1440px){
-      width: 100%;
-      right: 0;
-    }
-  }
-  
-  .default {
-    position: absolute;
-    opacity: 0;
-    min-height: 550px;
-    right: -250px;
-  }
+}
 
-
-  main { 
-    padding: 1rem;
+.wow {
+  position: absolute;
+  min-height: 550px;
+  right: -355px;
+  z-index: -1;
+  @media (min-width: 768px) {
+    right: 0;
   }
+  @media (min-width: 1440px) {
+    width: 100%;
+  }
+}
+
+.diabloHD {
+  position: absolute;
+  min-height: 550px;
+  right: -800px;
+  z-index: -1;
+  @media (min-width: 768px) {
+    right: -200px;
+  }
+  @media (min-width: 1440px) {
+    width: 100%;
+    right: 0;
+  }
+}
+
+.starcraft {
+  position: absolute;
+  min-height: 550px;
+  right: -500px;
+  z-index: -1;
+  @media (min-width: 768px) {
+    right: 0;
+  }
+  @media (min-width: 1440px) {
+    width: 100%;
+    right: 0;
+  }
+}
+
+.default {
+  position: absolute;
+  opacity: 0;
+  min-height: 550px;
+  right: -250px;
+}
+
+main {
+  padding: 1rem;
+}
+
+footer {
+  width: 100%;
+  background-image: url("/footer-background.png");
+  background-position: center top -15%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  min-height: 60vh;
+  padding-top: 80px;
+}
