--- a/src/assets/scss/footer/footerComponent.scss
+++ b/src/assets/scss/footer/footerComponent.scss
@@ -51,4 +51,12 @@
         align-self: end;
         margin-left: 30%;
     }
+
+    @media(min-width: 768px){
+        background-position: left;
+      }
+
+      @media(min-width: 1440px){
+        background-position: right;
+      }
 }
