--- a/src/assets/scss/header/gamesList.scss
+++ b/src/assets/scss/header/gamesList.scss
@@ -48,8 +48,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 2rem;
-
+  gap: 1rem;
+  color: $text-white;
   img {
     width: 24px;
     height: 24px;
